<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>tb3_localization</name>
  <version>0.0.0</version>
  <description>Particle Filter Based localization for TurtleBot3</description>
  <maintainer email="haydenmcameron@proton.me">hayden</maintainer>
  <license>MIT</license>

  <!-- Build tools -->
  <buildtool_depend>ament_python</buildtool_depend>

  <!-- Runtime dependencies -->
  <depend>rclpy</depend>
  <depend>launch</depend>
  <depend>launch_ros</depend>
  <depend>gazebo_ros</depend>
  <depend>turtlebot3_gazebo</depend>
  <depend>robot_state_publisher</depend>
  <depend>rviz2</depend>
  <depend>ros_gz_bridge</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>ros_gz_interfaces</depend>
  <depend>ament_index_python</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
